parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> statement
Rule 2     statement -> FIND ENTITIES WHERE CONDITION SEMICOLON
Rule 3     statement -> FIND ENTITIES WHERE CONDITION LIMIT NUMBER SEMICOLON
Rule 4     statement -> SELECT ENTITIES FROM ENTITY EQUAL INFO
Rule 5     CONDITION -> CP EQUAL POSTAL AND WORK
Rule 6     WORK -> TYPE EQUAL NAME
Rule 7     ENTITIES -> ENTITY
Rule 8     ENTITIES -> ENTITIES COMMA ENTITY

Terminals, with rules where they appear

AND                  : 5
COMMA                : 8
CP                   : 5
ENTITY               : 4 7 8
EQUAL                : 4 5 6
FIND                 : 2 3
FROM                 : 4
INFO                 : 4
LIMIT                : 3
NAME                 : 6
NUMBER               : 3
POSTAL               : 5
SELECT               : 4
SEMICOLON            : 2 3
TYPE                 : 6
WHERE                : 2 3
error                : 

Nonterminals, with rules where they appear

CONDITION            : 2 3
ENTITIES             : 2 3 4 8
WORK                 : 5
start                : 0
statement            : 1

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . statement
    (2) statement -> . FIND ENTITIES WHERE CONDITION SEMICOLON
    (3) statement -> . FIND ENTITIES WHERE CONDITION LIMIT NUMBER SEMICOLON
    (4) statement -> . SELECT ENTITIES FROM ENTITY EQUAL INFO

    FIND            shift and go to state 3
    SELECT          shift and go to state 4

    start                          shift and go to state 1
    statement                      shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (1) start -> statement .

    $end            reduce using rule 1 (start -> statement .)


state 3

    (2) statement -> FIND . ENTITIES WHERE CONDITION SEMICOLON
    (3) statement -> FIND . ENTITIES WHERE CONDITION LIMIT NUMBER SEMICOLON
    (7) ENTITIES -> . ENTITY
    (8) ENTITIES -> . ENTITIES COMMA ENTITY

    ENTITY          shift and go to state 6

    ENTITIES                       shift and go to state 5

state 4

    (4) statement -> SELECT . ENTITIES FROM ENTITY EQUAL INFO
    (7) ENTITIES -> . ENTITY
    (8) ENTITIES -> . ENTITIES COMMA ENTITY

    ENTITY          shift and go to state 6

    ENTITIES                       shift and go to state 7

state 5

    (2) statement -> FIND ENTITIES . WHERE CONDITION SEMICOLON
    (3) statement -> FIND ENTITIES . WHERE CONDITION LIMIT NUMBER SEMICOLON
    (8) ENTITIES -> ENTITIES . COMMA ENTITY

    WHERE           shift and go to state 8
    COMMA           shift and go to state 9


state 6

    (7) ENTITIES -> ENTITY .

    WHERE           reduce using rule 7 (ENTITIES -> ENTITY .)
    COMMA           reduce using rule 7 (ENTITIES -> ENTITY .)
    FROM            reduce using rule 7 (ENTITIES -> ENTITY .)


state 7

    (4) statement -> SELECT ENTITIES . FROM ENTITY EQUAL INFO
    (8) ENTITIES -> ENTITIES . COMMA ENTITY

    FROM            shift and go to state 10
    COMMA           shift and go to state 9


state 8

    (2) statement -> FIND ENTITIES WHERE . CONDITION SEMICOLON
    (3) statement -> FIND ENTITIES WHERE . CONDITION LIMIT NUMBER SEMICOLON
    (5) CONDITION -> . CP EQUAL POSTAL AND WORK

    CP              shift and go to state 12

    CONDITION                      shift and go to state 11

state 9

    (8) ENTITIES -> ENTITIES COMMA . ENTITY

    ENTITY          shift and go to state 13


state 10

    (4) statement -> SELECT ENTITIES FROM . ENTITY EQUAL INFO

    ENTITY          shift and go to state 14


state 11

    (2) statement -> FIND ENTITIES WHERE CONDITION . SEMICOLON
    (3) statement -> FIND ENTITIES WHERE CONDITION . LIMIT NUMBER SEMICOLON

    SEMICOLON       shift and go to state 15
    LIMIT           shift and go to state 16


state 12

    (5) CONDITION -> CP . EQUAL POSTAL AND WORK

    EQUAL           shift and go to state 17


state 13

    (8) ENTITIES -> ENTITIES COMMA ENTITY .

    WHERE           reduce using rule 8 (ENTITIES -> ENTITIES COMMA ENTITY .)
    COMMA           reduce using rule 8 (ENTITIES -> ENTITIES COMMA ENTITY .)
    FROM            reduce using rule 8 (ENTITIES -> ENTITIES COMMA ENTITY .)


state 14

    (4) statement -> SELECT ENTITIES FROM ENTITY . EQUAL INFO

    EQUAL           shift and go to state 18


state 15

    (2) statement -> FIND ENTITIES WHERE CONDITION SEMICOLON .

    $end            reduce using rule 2 (statement -> FIND ENTITIES WHERE CONDITION SEMICOLON .)


state 16

    (3) statement -> FIND ENTITIES WHERE CONDITION LIMIT . NUMBER SEMICOLON

    NUMBER          shift and go to state 19


state 17

    (5) CONDITION -> CP EQUAL . POSTAL AND WORK

    POSTAL          shift and go to state 20


state 18

    (4) statement -> SELECT ENTITIES FROM ENTITY EQUAL . INFO

    INFO            shift and go to state 21


state 19

    (3) statement -> FIND ENTITIES WHERE CONDITION LIMIT NUMBER . SEMICOLON

    SEMICOLON       shift and go to state 22


state 20

    (5) CONDITION -> CP EQUAL POSTAL . AND WORK

    AND             shift and go to state 23


state 21

    (4) statement -> SELECT ENTITIES FROM ENTITY EQUAL INFO .

    $end            reduce using rule 4 (statement -> SELECT ENTITIES FROM ENTITY EQUAL INFO .)


state 22

    (3) statement -> FIND ENTITIES WHERE CONDITION LIMIT NUMBER SEMICOLON .

    $end            reduce using rule 3 (statement -> FIND ENTITIES WHERE CONDITION LIMIT NUMBER SEMICOLON .)


state 23

    (5) CONDITION -> CP EQUAL POSTAL AND . WORK
    (6) WORK -> . TYPE EQUAL NAME

    TYPE            shift and go to state 25

    WORK                           shift and go to state 24

state 24

    (5) CONDITION -> CP EQUAL POSTAL AND WORK .

    SEMICOLON       reduce using rule 5 (CONDITION -> CP EQUAL POSTAL AND WORK .)
    LIMIT           reduce using rule 5 (CONDITION -> CP EQUAL POSTAL AND WORK .)


state 25

    (6) WORK -> TYPE . EQUAL NAME

    EQUAL           shift and go to state 26


state 26

    (6) WORK -> TYPE EQUAL . NAME

    NAME            shift and go to state 27


state 27

    (6) WORK -> TYPE EQUAL NAME .

    SEMICOLON       reduce using rule 6 (WORK -> TYPE EQUAL NAME .)
    LIMIT           reduce using rule 6 (WORK -> TYPE EQUAL NAME .)

